# api/v1/event/router.go
@@ -6,7 +6,7 @@ func Routers(g *gin.RouterGroup) {
 	g.GET("/events", GetEventList)
 	g.GET("/events/:id", GetEventByID)
 	g.PUT("/events/:id", UpdateEvent)
-	// g.POST("/events/:id/checkin", NewEventCheckin)
+	g.GET("/checkins", GetCheckinList)
 }
 
 func WxRouters(g *gin.RouterGroup) {
@@ -18,4 +18,5 @@ func WxRouters(g *gin.RouterGroup) {
 	g.GET("/wx/events/:id", WxGetEventByID)
 	g.PUT("/wx/events/:id", WxUpdateEvent)
 	g.POST("/wx/events/:id/checkin", WxNewEventCheckin)
+	g.GET("/wx/checkins", WxGetCheckinList)
 }
